--- a/client/index.html
+++ b/client/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>Electron Game Client</title>
     <script src="./main.js" charset="utf-8"></script>
+    <link rel="stylesheet" href="./style.css">
   </head>
   <body>
 
