Fix bugs and clean up console logs

--- a/client/index.html
+++ b/client/index.html
@@ -7,6 +7,11 @@
     <link rel="stylesheet" href="./style.css">
   </head>
   <body>
-
+    <div id='load-container'>
+      <progress value="20" max="100" id='load'></progress>
+    </div>
+    <div id='killed'>
+      <h1>You were killed!</h1>
+    </div>
   </body>
 </html>
