--- a/client/index.html
+++ b/client/index.html
@@ -75,6 +75,7 @@
       <div id="spell-editor-log">
 
       </div>
+      <button type="button" id="toggle-spell-editor"><i class='material-icons'>more_horiz</i></button>
     </div>
 
     <div id="spell-name-modal" class='modal'>
@@ -95,8 +96,7 @@
 
     <div id="tutorial-container" style="width: 800px; height: 600px;">
       <div id='tutorial-header'>
-        <h3 id='tutorial-title'>Tutorial</h3>
-        <button id='close-tutorial' class="close">
+        <button type='button' id="refresh-tutorial"><i class='material-icons'>refresh</i></button><h3 id='tutorial-title'>Tutorial</h3><button id='close-tutorial' class="close">
           &times;
         </button>
       </div>
