Implemented GUI updates, saving and chests.

--- a/client/index.html
+++ b/client/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Electron Game Client</title>
-    <link href="https://fonts.googleapis.com/css?family=Bungee|Roboto|Material+Icons" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css?family=Bungee|Ubuntu+Mono|Roboto|Material+Icons" rel="stylesheet" />
     <link rel="stylesheet" href="../node_modules/bootstrap/dist/css/bootstrap.min.css" />
     <script src="./main.js" charset="utf-8"></script>
     <link rel="stylesheet" href="./style.css" />
