--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <button type="submit" id="new-client">Open New Client</button><input type="text" id="client-connect" value="localhost">
       </form>
       <button type="button" id="start-server">Start Server</button>
+      <button type="button" id="save-game" disabled>Save Game</button>
     </div>
     <table id="log-table">
       <tbody id="log">
